Add pale garden to TerraBlender